--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>Header</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae facere necessitatibus commodi illum sed debitis.</p>
+    <script src="script.js"></script>
 </body>
 </html>
