--- a/Conditionals/index.html
+++ b/Conditionals/index.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Conditionals</title>
 </head>
-
 <body>
-    <h1>Header</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae facere necessitatibus commodi illum sed debitis.</p>
     <script src="script.js"></script>
 </body>
 </html>
