--- a/Conditionals/index.html
+++ b/Conditionals/index.html
@@ -7,6 +7,7 @@
     <title>Conditionals</title>
 </head>
 <body>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <script src="consp.js"></script>
 </body>
 </html>
