--- a/Loops/index.html
+++ b/Loops/index.html
@@ -8,8 +8,9 @@
 </head>
 
 <body>
-    <script src="consp.js"></script>
-    <script src="script.js"></script>
+    <!-- <script src="consp.js"></script>
+    <script src="script.js"></script> -->
+    <script src="tasks.js"></script>
 </body>
 
 </html>
