--- a/Loops/index.html
+++ b/Loops/index.html
@@ -8,9 +8,7 @@
 </head>
 
 <body>
-    <!-- <script src="consp.js"></script>
-    <script src="script.js"></script> -->
-    <script src="tasks.js"></script>
+    <script src="homework2.js"></script>
 </body>
 
 </html>
