--- a/Arrays/index.html
+++ b/Arrays/index.html
@@ -7,6 +7,7 @@
     <title>Arrays Homework</title>
 </head>
 <body>
-    <script src="arraysHomework.js"></script>
+    <script src="arraysHW.js"></script>
+    <script src="arraysHW2.js"></script>
 </body>
 </html>
