--- a/Objects/index.html
+++ b/Objects/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conditionals</title>
+    <title>Objects</title>
 </head>
 <body>
-    <!-- <script src="script.js"></script> -->
-    <script src="conditionalsHW.js"></script>
+    <script src="objectsHW.js"></script>
+    <script src="objectsHW2.js"></script>
+    <script src="objectsHW_Classes.js"></script>
 </body>
 </html>
