--- a/Objects/index.html
+++ b/Objects/index.html
@@ -10,5 +10,6 @@
     <script src="objectsHW.js"></script>
     <script src="objectsHW2.js"></script>
     <script src="objectsHW_Classes.js"></script>
+    <script src="consp.js"></script>
 </body>
 </html>
