--- a/Objects/index.html
+++ b/Objects/index.html
@@ -11,6 +11,6 @@
     <script src="objectsHW2.js"></script>
     <script src="objectsHW_Classes.js"></script>
     <script src="consp.js"></script>
-    <script src="tasks.js"></script>
+    <script src="objectsHW_Classes2.js"></script>
 </body>
 </html>
