--- a/Objects/index.html
+++ b/Objects/index.html
@@ -12,5 +12,6 @@
     <script src="objectsHW_Classes.js"></script>
     <script src="consp.js"></script>
     <script src="objectsHW_Classes2.js"></script>
+    <script src="tasks.js"></script>
 </body>
 </html>
